--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,11 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
-
+            logout:
+                path:   app_logout
+                # where to redirect after logout
+                target: app_login                
+                
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
